src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_cleared_locks_restored_on_removal.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical num lock
app: key pressed: 69
app: modifiers: depressed=16, latched=0, locked=16, group=0
app: key released: 69
app: modifiers: depressed=0, latched=0, locked=16, group=0
virtual keyboard cleared modifiers
app: modifiers: depressed=0, latched=0, locked=0, group=0
virtual keyboard destroyed
app: modifiers: depressed=0, latched=0, locked=16, group=0
