src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_held_key_released_under_own_keymap_after_physical_key.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key held
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
physical key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 16 (q)
app: key released: 16 (q)
virtual key release
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key released: 21 (z)
