src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_held_keys_released_on_removal_with_own_keymap.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual shift and key held
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 42 (Shift_L)
app: modifiers: depressed=1, latched=0, locked=0, group=0
app: key pressed: 21 (Z)
virtual keyboard destroyed
app: key released: 21 (Z)
app: key released: 42 (Shift_L)
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
