src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_key_state_other_than_pressed_released.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key state 2, twice
app: key pressed: 16
virtual key state 0
app: key released: 16
virtual key state 2, virtual keyboard destroyed
app: key pressed: 16
app: key released: 16
