src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_keymap_does_not_inherit_physical_num_lock.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical num lock
app: key pressed: 69 (Num_Lock)
app: modifiers: depressed=16, latched=0, locked=16, group=0
app: key released: 69 (Num_Lock)
app: modifiers: depressed=0, latched=0, locked=16, group=0
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
physical key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: modifiers: depressed=0, latched=0, locked=16, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
