src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_keymap_num_lock_does_not_leak_into_configured.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key and num lock
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
app: modifiers: depressed=0, latched=0, locked=16, group=0
physical key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
