src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_keymap_replaced_with_configured_one_restores_it.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
keymap replaced with configured, virtual key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
virtual keyboard destroyed
