src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_keymap_switches_with_physical_keyboard.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
physical key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
physical key
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
